Dodanie funkcji tworzaca kolarz

--- a/res/config.ini
+++ b/res/config.ini
@@ -1,3 +1,3 @@
 [Paths]
-input_dir=J:/Kody/c/POS_projekt/res/input
-output_dir=J:/Kody/c/POS_projekt/out
+input_dir=P:/POS_projekt/res/input
+output_dir=P:/POS_projekt/out
